--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-</head>
-<body>
-    
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Las peliculas de los c####es</title>
+
+
+  </head>
+  <body>
+
+
+
+    <input type="text" id="busqueda">
+    <button id="button">Buscar</button>
+    <button id="buttonGen">Genero</button>
+    <div class="peliculas"></div>
+
+
+
+
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="./scripts/prueba.js"></script>
+  </body>
 </html>
