--- a/index.html
+++ b/index.html
@@ -6,48 +6,49 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
     <link rel="stylesheet" href="./styles/style.css">
 
-  </head>
+  </head>  
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light miVerde justify-content-between">
-      <a class="navbar-brand" href="index.html">
-        <img class="navbar-brand" src="./recursos/GEEKFLIX.png" alt="">
-      </a>
+    <!-- NAV-VAR -->
+    <nav class="navbar navbar-expand-lg navbar-light miVerde d-flex justify-content-around">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-    
       <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="miDieta.html">Actores</a>
+            <a class="nav-link" href="actores.html">Actores</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contacto.html">Contacto</a>
           </li>
         </ul>
-        <form class="form-inline">
-          <input type="search" id="busqueda" placeholder="Search" aria-label="Search">
-          <button type="submit" id="button">Buscar</button>
-        </form>
       </div>
+      <a class="navbar-brand" href="index.html">
+        <img class="navbar-brand" src="./recursos/GEEKFLIX.png" alt="">
+      </a>
+      <form class="form-inline">
+        <input type="search" id="busqueda" placeholder="Search" aria-label="Search">
+        <button type="submit" id="button">Buscar</button>
+      </form>
     </nav> 
 
+  <!-- MAIN -->
   <main class="container-flow">
-    <div class="peliculas row center"></div>
+    <div class="peliculas row justify-content-center"></div>
     <!-- <div class="generos"></div> -->
   </main>
     
 
 
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="./scripts/index.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
